# rime

./: Cargo.toml  README.md  flake.nix
.github/workflows/: build_nix.yml  ci.yml  release.yml
rime-cli/: Cargo.toml
rime-cli/src/: main.rs
rime-lib/: Cargo.toml
rime-lib/src/: analysis.rs  catalog.rs  config.rs  lib.rs  monitor.rs
