[package]
name = "rime-cli"
version = "0.1.0"
edition = "2021"
description = "Iceberg table analysis CLI"

[[bin]]
name = "rime"
path = "src/main.rs"

[dependencies]
rime-lib = { path = "../rime-lib" }
clap = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
serde_yaml = "0.9"
dirs = "5.0"