[package]
name = "rime-lib"
version = "0.1.0"
edition = "2021"
description = "Iceberg table analysis library"

[dependencies]
iceberg = { workspace = true }
iceberg-catalog-glue = { workspace = true }
iceberg-catalog-rest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
anyhow.workspace = true
tracing = { workspace = true }
async-trait = { workspace = true }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
